Allowing Kronos to be tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ plugins/*
 !plugins/pencilblue/**
 !plugins/ga
 !plugins/ga/**
+!plugins/kronos/**
 !plugins/portfolio
 !plugins/portfolio/**
 !plugins/sample
