--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "async": "1.5.2",
     "async-eventemitter": "0.2.2",
+    "bluebird": "^3.5.1",
     "bower": "^1.7.9",
     "cookies": "^0.6.2",
     "fakeredis": "1.0.3",
@@ -33,12 +34,12 @@
     "htmlencode": "0.0.4",
     "http-status-codes": "^1.0.6",
     "locale": "^0.1.0",
-    "lodash": "^4.17.2",
+    "lodash": "^4.17.5",
     "mime": "^1.3.4",
     "mongodb": "2.2.15",
     "node.extend": "1.1.6",
     "nodemailer": "0.7.1",
-    "npm": "3.8.5",
+    "npm": "^3.8.5",
     "redis": "^2.6.3",
     "sanitize-html": "1.13.0",
     "semver": "5.3.0",
